--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
+<!DOCTYPE HTML>
 
+<html lang="sk">
+
+<head>
+	<meta charset="utf-8" />
+	<meta name="description" content="" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<meta name="HandheldFriendly" content="true" />
+    <meta name="MobileOptimized" content="320" />
+	<meta name="format-detection" content="telephone=no">
+	<meta name="format-detection" content="date=no">
+	<meta name="format-detection" content="address=no">
+	<meta name="format-detection" content="email=no">
+	
+	<title>SK-MONT, s.r.o.</title>
+	
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+</head>
+
+<body>
+
+	<div class="header clearfix">
+		<a href="#" class="header__logo">
+			<img src="assets/images/logo.png" alt="SK-MONT, s.r.o." />
+		</a>
+		<a href="#" class="nav__trigger">
+			<span class="transition"></span>
+			<span class="transition"></span>
+			<span class="transition"></span>
+			<span class="transition"></span>
+		</a>
+		<div class="header__nav transition clearfix">
+			<ul class="header__menu">
+				<li><a href="#" class="active">Domov</a></li>
+				<li><a href="#">Technológie</a></li>
+				<li><a href="#">Galéria</a></li>
+				<li><a href="#">Referencie</a></li>
+				<li><a href="#">Kontakt</a></li>
+			</ul>
+			<ul class="header__lang">
+				<li><a href="#"><img src="assets/images/en.png" alt="English" /></a></li>
+				<li><a href="#"><img src="assets/images/sk.png" alt="Slovensky" /></a></li>
+				<li><a href="#"><img src="assets/images/de.png" alt="Deutsch" /></a></li>
+			</ul>
+		</div>
+	</div>
+
+	<script>
+		(function() {
+			var nav__trigger = document.getElementsByClassName("nav__trigger")[0];
+			var nav = document.getElementsByClassName("header__nav")[0];
+		
+			var open__menu = function() {
+				nav__trigger.classList.toggle("open");
+				nav.classList.toggle("open");
+			};
+			
+			nav__trigger.addEventListener("click", open__menu)
+		})();
+	</script>
+	
+</body>
+</html>
